// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Small as selected 1`] = `
<div
  className="selectedSize"
>
  <span
    className="smallIndent"
  >
    Small
  </span>
  <i
    className="fas fa-angle-down arrow"
  />
</div>
`;

exports[`Should render closed menu 1`] = `
<div
  className="selectedSize"
>
  <span
    className="smallIndent"
  />
  <i
    className="fas fa-angle-down arrow"
  />
</div>
`;

exports[`Should render open menu 1`] = `
<div
  className="menu"
>
  <div
    className="sizeOption"
  >
    <strong
      className="smallIndent"
    >
      Please Choose A Size
    </strong>
  </div>
  <div
    className="sizeOption"
    id="small"
    onClick={[Function]}
  >
    small
  </div>
  <div
    className="sizeOption"
    id="medium"
    onClick={[Function]}
  >
    medium
  </div>
  <div
    className="sizeOption"
    id="large"
    onClick={[Function]}
  >
    large
  </div>
</div>
`;
